test/tests/operators/match/error_binding_after_mutation.txt
error: match binding `$v` is used after its matched field is assigned
 --> tests/operators/match/error_binding_after_mutation.tql:9:9
  |
9 |     y = $v
  |         ^^ 
  |
  = hint: move the assignment after all uses of the binding
